<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/img"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/lowered_expectations"
            android:visibility="visible" />


        <LinearLayout
            android:id="@+id/middleBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profileImage"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/nameAndAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:padding="25dp"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:padding="25dp"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/profileText"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:gravity="start"
            android:padding="25dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/middleBar"
            android:background="@drawable/border"/>


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:onClick="goBack"
            android:text="@string/logout" />

    </RelativeLayout>


</ScrollView>
