<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="239dp">

        <ImageView
            android:id="@+id/matches_pic"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="false"
            android:contentDescription="match-pic"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            tools:src="@drawable/josie" />

        <TextView
            android:id="@+id/matches_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/matches_pic"
            android:layout_alignParentStart="true"
            android:gravity="end|center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#000"
            tools:text="@string/matches" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/latValue"
            android:layout_marginEnd="148dp"
            android:ellipsize="end"
            android:text="Distance"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/latValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/like_button"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/lonValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/distance"
            android:layout_marginStart="116dp"
            android:ellipsize="end"
            android:textColor="@color/grey" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/matches_pic"
            android:layout_marginEnd="35dp"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="liked"
            android:tint="@color/grey"
            app:srcCompat="@drawable/favorite" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
